<resources>
    <string name="app_name">Vistas</string>
    <string name="titulo_opciones">OPCIONES</string>
    <string name="opt1">Áreas</string>
    <string name="opt2">Volúmenes</string>
    <string name="opt3">Opreaciones Realizadas</string>
    <string name="area1">Cuadrado</string>
    <string name="area2">Rectángulo</string>
    <string name="area3">Triángulo</string>
    <string name="area4">Círculo</string>
    <string name="titulo_areas">AREAS</string>
    <string name="lblcuadrado">Lado: </string>
    <string name="txtbtncalcular">Calcular</string>
    <string name="txtbtnborrar">Borrar</string>
    <string name="lblbase">Base</string>
    <string name="lblaltura">Altura</string>
    <string name="lblradio">Radio</string>
    <string name="titulo_resultado" />
    <string name="lblResultadoArea">Area:</string>
    <string name="btnOk">Ok</string>
    <string name="lblResultadoVolume">Volumen</string>
    <string name="errcuadrado">Digite el dato solicitado</string>
    <string name="titulo_volumenes">VOLÚMENES</string>
    <string name="vol1">Esfera</string>
    <string name="vol2">Cilindro</string>
    <string name="vol3">Cono</string>
    <string name="vol4">Cubo</string>
    <string name="lblprofundidad">Profundidad</string>
    <string name="operacion">"Area de "</string>
    <string name="lblTituloHistorial">Realizadas</string>
    <string name="flNo">No</string>
    <string name="flOperacion">Operación</string>
    <string name="flDatos">Datos</string>
    <string name="flResultado">Resultado</string>
    <string name="stretch">*</string>
    <string name="operacionVolume">"Volumen de "</string>
    <string name="areacuadrado">Area de Cuadrado</string>
    <string name="arearectangulo">Area de Rectángulo</string>
    <string name="areatriangulo">Area de Triángulo</string>
    <string name="areacirculo">Area de Circulo</string>
    <string name="volumenesfera">Volumen de Esfera</string>
    <string name="volumencilindro">Volumen de Cilindro</string>
    <string name="volumencono">Volumen de Cono</string>
    <string name="vulumencubo">Volumen de Cubo</string>

    <string-array name="opciones">
        <item>@string/opt1</item>
        <item>@string/opt2</item>
        <item>@string/opt3</item>
    </string-array>

    <string-array name="opt_areas">
        <item>@string/area1</item>
        <item>@string/area2</item>
        <item>@string/area3</item>
        <item>@string/area4</item>
    </string-array>

    <string-array name="opt_volumes">
        <item>@string/vol1</item>
        <item>@string/vol2</item>
        <item>@string/vol3</item>
        <item>@string/vol4</item>
    </string-array>

</resources>