<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Historial">

    <TextView
        android:id="@+id/lblTituloHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTituloHistorial"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TableLayout
        android:id="@+id/tblHistorial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="@string/stretch">

        <TableRow
            android:id="@+id/flDatos"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flNo"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flOperacion"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flDatos"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flResultado"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</LinearLayout>