<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Resultado">

    <TextView
        android:id="@+id/lblTituloResultado"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/titulo_resultado"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/lblResultadoArea"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/lblResultadoValue"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goback"
        android:text="@string/btnOk" />
</LinearLayout>